2008-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-context): Add support for `pred'.
	(completion-table-with-terminator): Don't use complete-with-action
	since we have to distinguish all three cases anyway.
	(completion-table-with-predicate): New function.
	(dynamic-completion-table): Add obsolete alias.

	* emacs-lisp/trace.el (trace-make-advice): Don't change selected-window.

2008-04-18  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-menu-map, vc-dir-mode-map, vc-dir-tool-bar-map):
	Use quit-window instead of bury-buffer.

2008-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-terminator): Fix last fix.

2008-04-18  Andreas Schwab  <schwab@suse.de>

	* Makefile.in ($(MH_E_DIR)/mh-loaddefs.el, $(CAL_DIR)/cal-loaddefs.el)
	($(CAL_DIR)/diary-loaddefs.el, $(CAL_DIR)/hol-loaddefs.el):
	Depend on $(lisp)/subdirs.el.

2008-04-18  Juanma Barranquero  <lekktu@gmail.com>

	* descr-text.el (describe-char-after):
	Use `define-obsolete-function-alias'.

	* dired-x.el (dired-omit-files-p): Use `define-obsolete-variable-alias'.

	* facemenu.el (facemenu-unlisted-faces): Fix obsolescence description.

	* savehist.el (savehist-load): Add WHEN to obsolescence declaration.
	Remove redundant obsolescence info in docstring.

	* vc-hooks.el (vc-ignore-vc-files, vc-master-templates)
	(vc-header-alist): Add WHEN to obsolescence declaration.
	(vc-state): Fix typo in docstring.

	* emacs-lisp/checkdoc.el (checkdoc-minor-keymap):
	Use `define-obsolete-variable-alias'.

	* emulation/tpu-edt.el (tpu-have-ispell):
	* international/codepage.el (codepage-setup):
	Fix typo in obsolescence declaration.

	* international/mule.el (char-coding-system-table):
	Remove redundant obsolescence info in docstring.
	(charset-list, generic-char-p, set-char-table-default):
	Fix typos in obsolescence decarations.

	* international/mule-diag.el (non-iso-charset-alist):
	Fix typo in obsolescence declaration.